<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WindyCityRails</string>
    <string name="session_header_text">Session Description</string>
    <string name="bio_header_text">About the Speaker</string>
    <string name="sponsor_url_button">View Web Site</string>
    <string name="directions_button">Get Directions</string>
    <string name="session_website_button_text">Web Site</string>
    <string name="session_twitter_button_text">Twitter</string>
    <string name="official_website_url">http://windycityrails.org/</string>
    <string name="about_cr_button_text">ChicagoRuby.org</string>
    <string name="about_wg_button_text">WisdomGroup.com</string>
    <string name="about_dev_header_text">Android App Development</string>
    <string name="about_wcgteam_header_text">WindyCityRails Dev Team</string>
    <string name="about_supported_header_text">Supported By</string>
    <string name="about_app_dev_text">Kevin McMahon\n@klmcmahon\nandroid@methodsix.com</string>
    <string name="floorplan_na">Floorplan Not Available</string>
    <!-- URLs for the xml data -->
    <string name="data_protocol">http</string>
    <string name="data_base_url">windycityrails.org</string>
    <string name="data_filename_sessions">sessions.xml</string>
    <string name="data_filename_locations">locations.xml</string>
    <string name="data_filename_sponsors">sponsors.xml</string>
</resources>
