<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<RelativeLayout
	    android:layout_width="fill_parent"
    	android:layout_height="?android:attr/listPreferredItemHeight"    
    	android:orientation="vertical" android:gravity="center_horizontal" >
	  <TextView android:id="@+id/about_dev_header"
	  			android:text="@string/about_dev_header_text"
	  			android:textSize="18sp"
	  			android:padding="10dp"
	  			android:gravity="center"
	  			android:layout_width="fill_parent" android:layout_height="wrap_content"
	  			style="@style/wcListSeparator"/>
	  <TextView android:id="@+id/about_dev" 
	  			android:layout_width="fill_parent" android:layout_height="wrap_content"
	 			android:padding="10dp"
	 			android:textSize="16sp" 
	 			android:layout_below="@+id/about_dev_header"
	 			android:gravity="center_horizontal"
	 			style="@style/detail_description" />
	  <TextView android:id="@+id/about_wcgteam_header"
	  			android:text="@string/about_wcgteam_header_text"
	  			android:textSize="18sp"
	  			android:padding="10dp"
	  			android:gravity="center"
	  			android:layout_width="fill_parent" 
	  			android:layout_height="wrap_content"
	  			android:layout_below="@+id/about_dev"
	  			style="@style/wcListSeparator"/>
	  <TextView android:id="@+id/about_wcgteam" 
	  			android:layout_width="fill_parent" android:layout_height="wrap_content"
	 			android:padding="10dp"
	 			android:textSize="16sp" 
	 			android:layout_below="@+id/about_wcgteam_header"
	 			android:gravity="center_horizontal"
	 			style="@style/detail_description" />
	 <TextView android:id="@+id/about_supported_header"
	  			android:text="@string/about_supported_header_text"
	  			android:textSize="18sp"
	  			android:padding="10dp"
	  			android:gravity="center"
	  			android:layout_width="fill_parent" 
	  			android:layout_height="wrap_content"
	  			android:layout_below="@+id/about_wcgteam"
	  			style="@style/wcListSeparator"/>
	<ImageView
			  android:id="@+id/cr_image"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:padding="10dp"
			  android:layout_below="@+id/about_supported_header" />
	<Button
		android:id="@+id/about_cr_button" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/cr_image"
		android:padding="10dp"
		android:text="@string/about_cr_button_text" 
		android:textSize="16sp"/>
	  <ImageView
	        android:id="@+id/wg_image"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/about_cr_button"
	        android:padding="10dp" />	
	<Button
		android:id="@+id/about_wg_button" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/wg_image"
		android:padding="10dp"
		android:text="@string/about_wg_button_text" 
		android:textSize="16sp"/>	
	</RelativeLayout>
</ScrollView>