<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
	<RelativeLayout
	    android:layout_width="fill_parent"
    	android:layout_height="?android:attr/listPreferredItemHeight"    
    	android:orientation="vertical" android:gravity="center_horizontal" >
	  <TextView android:id="@+id/title" 
	  			android:layout_width="fill_parent" 
	  			android:layout_height="wrap_content"
	  			android:padding="10dp" 
	  			style="@style/detail_title" />
	  <TextView android:id="@+id/desc_header"
	  			android:text="@string/session_header_text"
	  			android:padding="10dp"
	  			android:layout_width="fill_parent" 
	  			android:layout_height="wrap_content"
	  			android:layout_below="@+id/title"
	  			style="@style/wcListSeparator"/>
	  <TextView android:id="@+id/description" 
	  			android:layout_width="fill_parent" android:layout_height="wrap_content"
	 			android:padding="10dp" android:layout_below="@+id/desc_header"
	 			style="@style/detail_description" />
	 <TextView
	 	android:id="@+id/bio_header"	
		android:layout_width="fill_parent"	
		android:layout_height="wrap_content"	
		android:padding="10dp"
		style="@style/wcListSeparator" 
		android:text="@string/bio_header_text"
		android:textSize="18dp"
		android:layout_below="@+id/description"
		 />	
	<RelativeLayout
		  android:id="@+id/bio_layout_block"
	  	  android:layout_width="wrap_content" android:layout_height="fill_parent"
		  android:orientation="horizontal" android:gravity="center_horizontal" 
		  android:layout_below="@+id/bio_header">
  	      <org.windycityrails.ui.WebImageView
			        android:id="@+id/speaker_icon"
			        android:layout_width="120px"
			        android:layout_height="120px"
			        android:padding="10dp" />
		<LinearLayout android:orientation="vertical"
		  android:layout_width="wrap_content" android:layout_height="fill_parent"
		  android:layout_toRightOf="@+id/speaker_icon" >
			  <TextView android:id="@+id/presenter" 
		   			android:layout_width="fill_parent" android:layout_height="wrap_content"
		   			android:padding="10dp" 
		   			style="@style/detail_presenter"/>
		</LinearLayout>
	</RelativeLayout>
	<TextView android:id="@+id/bio" 
		  			android:layout_width="wrap_content" 
		  			android:layout_height="wrap_content"
		  			android:layout_below="@+id/bio_layout_block"
		  			android:padding="10dp" 
		  			style="@style/detail_bio" />
	<RelativeLayout
			android:id="@+id/session_disclosures"
	  		android:layout_width="fill_parent"
	   		android:layout_height="fill_parent"
	   		android:background="@color/wc_main_dark"
	   		android:layout_below="@+id/bio">
	<RelativeLayout
	  		android:layout_width="fill_parent"
	   		android:layout_height="fill_parent"
	   		android:orientation="horizontal"
	   		android:id="@+id/session_website_disclosure"
	   		android:background="@color/wc_main"
	   		android:layout_marginTop="2dp"
	   		android:layout_marginBottom="2dp">
	   		<TextView android:id="@+id/session_website"
				android:layout_width="fill_parent" 
	  			android:layout_height="wrap_content"
	  			android:padding="10dp" 
	  			style="@style/directions_location_detail"
	  			android:text="@string/session_website_button_text"
	  			/>
	  		<ImageView 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 	
				style="@style/disclosure_image"
				/>
	</RelativeLayout>
	<RelativeLayout
	 		android:layout_width="fill_parent"
	  		android:layout_height="fill_parent"
	  		android:orientation="horizontal"
	  		android:id="@+id/session_twitter_disclosure"
	  		android:layout_below="@+id/session_website_disclosure"
	   		android:layout_marginBottom="2dp">
	  		<TextView android:id="@+id/session_twitter"
			android:layout_width="fill_parent" 
	 			android:layout_height="wrap_content"
	 			android:padding="10dp" 
	 			style="@style/directions_location_detail"
	 			android:text="@string/session_twitter_button_text" />
	 		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 	
			style="@style/disclosure_image" />
	</RelativeLayout></RelativeLayout>
	</RelativeLayout>
</ScrollView>